updated job summary
