# cmd/core/entities/jobEntities/job.go
@@ -4,6 +4,7 @@ import (
 	"domain_threat_intelligence_api/api/grpc/protoServices"
 	"domain_threat_intelligence_api/cmd/core/entities/networkEntities"
 	"errors"
+	"fmt"
 	"gorm.io/datatypes"
 	"reflect"
 	"time"
@@ -163,6 +164,36 @@ func (j *Job) GetFieldsFromJSON() error {
 	return nil
 }
 
+// GetSummary returns compact profiles for every scanned host in a job
+func (j *Job) GetSummary() JobSummary {
+	summary := JobSummary{
+		Profiles: make(map[string]*networkEntities.NetworkNodeProfile),
+	}
+
+	for _, s := range j.NodeScans {
+		uuid := fmt.Sprintf("%x-%x-%x-%x-%x",
+			s.NodeUUID.Bytes[0:4],
+			s.NodeUUID.Bytes[4:6],
+			s.NodeUUID.Bytes[6:8],
+			s.NodeUUID.Bytes[8:10],
+			s.NodeUUID.Bytes[10:16],
+		)
+
+		p, ok := summary.Profiles[uuid]
+		if ok {
+			summary.Profiles[uuid] = p.WithNodeScans([]networkEntities.NetworkNodeScan{s})
+		} else {
+			profile := networkEntities.
+				NewNetworkNodeProfile(s.Node.Identity, s.Node.TypeID).
+				WithNodeScans([]networkEntities.NetworkNodeScan{s})
+
+			summary.Profiles[uuid] = profile
+		}
+	}
+
+	return summary
+}
+
 const defaultTimout = 5000
 const defaultDelay = 200
 const defaultRetries = 3
@@ -202,4 +233,8 @@ type JobCreateParams struct {
 	Delay   uint64 `json:"Delay,omitempty"`
 	Timout  uint64 `json:"Timout,omitempty"`
 	Retries uint64 `json:"Retries,omitempty"`
+}
+
+type JobSummary struct {
+	Profiles map[string]*networkEntities.NetworkNodeProfile `json:"Profiles"`
 }
