# docs/swagger/swagger.json
@@ -1624,7 +1624,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/jobEntities.Job"
+                            "$ref": "#/definitions/routing.jobPayload"
                         }
                     },
                     "400": {
@@ -3501,6 +3501,17 @@
                 "JOB_STATUS_CANCELLED"
             ]
         },
+        "jobEntities.JobSummary": {
+            "type": "object",
+            "properties": {
+                "Profiles": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/networkEntities.NetworkNodeProfile"
+                    }
+                }
+            }
+        },
         "jobEntities.JobType": {
             "type": "integer",
             "enum": [
@@ -3708,7 +3719,7 @@
                     "description": "Network node unique identity, can be any address or URI. Must be unique.",
                     "type": "string"
                 },
-                "NodeType": {
+                "NodeTypeID": {
                     "$ref": "#/definitions/networkEntities.NetworkNodeType"
                 },
                 "NodeTypeId": {
@@ -3756,7 +3767,7 @@
                     "description": "owner identity data",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/networkEntities.scanStringValue"
+                        "$ref": "#/definitions/networkEntities.scanIntValue"
                     }
                 },
                 "Alerts": {
@@ -3834,6 +3845,9 @@
                     "items": {
                         "$ref": "#/definitions/networkEntities.scanStringValue"
                     }
+                },
+                "Identity": {
+                    "type": "string"
                 },
                 "IsBlacklisted": {
                     "description": "blacklists data",
@@ -3988,6 +4002,9 @@
                     "items": {
                         "$ref": "#/definitions/networkEntities.domainRecordValue"
                     }
+                },
+                "NodeTypeID": {
+                    "type": "integer"
                 },
                 "OpenPorts": {
                     "description": "host data",
@@ -4459,6 +4476,17 @@
                 },
                 "OldPassword": {
                     "type": "string"
+                }
+            }
+        },
+        "routing.jobPayload": {
+            "type": "object",
+            "properties": {
+                "job": {
+                    "$ref": "#/definitions/jobEntities.Job"
+                },
+                "summary": {
+                    "$ref": "#/definitions/jobEntities.JobSummary"
                 }
             }
         },
